# pypp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/interpreter/: CMakeLists.txt  main.cc
src/lib/: CMakeLists.txt
src/lib/os/: CMakeLists.txt  module.cc  os.hh  os_unix.cc
src/lib/uuid/: CMakeLists.txt  module.cc  uuid.cc  uuid.hh
src/python/: CMakeLists.txt
src/python/api/: Python.h  floatobject.h  intobject.h  longobject.h  object.h  patchlevel.h  pyconfig.h  stringobject.h  tupleobject.cc  tupleobject.h
src/python/debug/: debug.cc  debug.hh
src/python/objects/: boolean.cc  boolean.hh  code.cc  code.hh  dict.cc  dict.hh  file.hh  frame.cc  frame.hh  integer.cc  integer.hh  list.cc  list.hh  none.cc  none.hh  object.cc  object.hh  object.impl.hh  set.cc  set.hh  string.cc  string.hh  tuple.cc  tuple.hh
src/python/parser/: grammar.inc.hh  parser.cc  parser.hh
src/python/vm/: interpreter.cc  interpreter.hh  marshal.cc  marshal.hh  opcode.hh
